# bayes

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
docs/html/: binomial.html
docs/md/: binomial.md  doc.md
examples/: approx.rs  basis.rs  composition.rs  fit.just  gmm.rs  iris.rs  iteration.rs  logistic.rs  mixture.rs  multinormal.rs  regression.rs  sample.rs  table.csv  table.rs
examples/cli/: normal.json  normal_fit.sh
examples/data/: iris.csv  titanic.csv
examples/examples/: conjugate.rs  likelihood.rs  mixture.rs  regression.rs  sampling.rs  stochastic.rs
examples/html/: sampling.html
examples/md/: conditional-normal.md  glm.md  heteroscedasticity.md  sampling.md
models/conjugate/: bernoulli-beta.json  poisson-gamma.json
models/constant/: bernoulli.json  normal.json  poisson.json
models/generalized/: logistic.json  loglinear.json
models/hidden/: cluster.json
models/linear/: linear.json
models/multilevel/: regression.json
models/simple/: bernoulli.json
scripts/: gsl.sh  pgbayes.sh  pgbayes.sql
scripts/python/: bayes.py
scripts/sql/: bayes.sql
sql/: bayes.sql
src/: lib.rs
src/api/: c_api.rs  mod.c  mod.rs  mod_temp.c  pg_helper.c  pg_helper.h  pgserver.rs  pgsymbols.rs  postgres.rs  server.rs
src/approx/: density.rs  draw.rs  empirical.rs  hdi.rs  histogram.rs  interval.rs  mod.rs  region.rs  walk.rs
src/basis/: mod.rs  pca.rs
src/basis/cluster/: mod.rs
src/basis/cov/: mod.rs
src/basis/frequency/: mod.rs
src/basis/interp/: mod.rs
src/basis/interpolation/: mod.rs
src/basis/seq/: mod.rs
src/basis/surf/: mod.rs
src/calc/: mod.rs  summary.rs
src/cli/: main.rs
src/decision/: mod.rs
src/distr/: bernoulli.rs  beta.rs  categorical.rs  dirichlet.rs  gamma.rs  mixture.rs  mod.rs  multinormal.rs  normal.rs  poisson.rs  vonmises.rs  wishart.rs
src/feature/: cluster.rs  dim.rs  metric.rs  mod.rs  poly.rs  smooth.rs
src/feature/basis/: mod.rs
src/feature/cluster/: mod.rs
src/feature/extraction/: mod.rs
src/feature/image/: interp.rs  mod.rs
src/feature/lda/: mod.rs
src/feature/match/: mod.rs
src/feature/metric/: mod.rs
src/feature/mra/: mod.rs
src/feature/pca/: mod.rs
src/feature/poly/: mod.rs
src/feature/signal/: mod.rs
src/feature/state/: mod.rs
src/fit/: cluster.rs  em.rs  filter.rs  graph.rs  linear.rs  margin.rs  mod.rs  utils.rs  visitors.rs
src/fit/cluster/: mod.rs
src/fit/markov/: metropolis.rs  mod.rs
src/fit/optim/: em.rs  mod.rs
src/fit/sample/: mala.rs  rmhmc.rs  rwmh.rs
src/fit/sim/: marginal.rs  metropolis.rs  mod.rs
src/fit/state/: mod.rs
src/fit/walk/: metropolis.rs  mod.rs
src/foreign/: mod.rs
src/foreign/export/: clang.rs  mod.rs
src/foreign/gcem/: mod.rs
src/foreign/gsl/: block_double.rs  multifit.rs  multifit_nlinear.rs  multimin.rs  randist.rs  spline2d.rs  utils.rs  wavelet.rs  wavelet2d.rs
src/foreign/mcmc/: mcmc.cpp  mod.rs
src/foreign/mkl/: dfti.rs  mod.rs
src/foreign/stats/: stats.cpp
src/graph/: mod.rs
src/gsl/: errno.rs  gamma.rs  matrix_double.rs  mod.rs  multifit.rs  multifit_nlinear.rs  multimin.rs  rand_utils.rs  randist.rs  rng.rs  spline.rs  utils.rs  vector_double.rs  wavelet.rs  wavelet2d.rs
src/image/: mod.rs
src/inference/: mod.rs  visitors.rs
src/inference/sim/: histogram.rs  marginal.rs  metropolis.rs  mod.rs
src/io/: mod.rs
src/io/buffer/: mod.rs
src/io/seq/: mod.rs
src/io/surf/: mod.rs
src/io/table/: csv.rs  mod.rs  sql.rs
src/mkl/: utils.rs  vsl.rs
src/model/: mod.rs  parse.rs
src/model/decision/: mod.rs
src/old/: lib.rs
src/old/approx/: histogram.rs  walk.rs
src/old/cli/: main.rs
src/old/feature/: cluster.rs  dim.rs  mod.rs  signal.rs
src/old/fit/: filter.rs  linear.rs  mod.rs  utils.rs
src/old/foreign/: mod.rs
src/old/graph/: mod.rs
src/old/prob/: bernoulli.rs  beta.rs  categorical.rs  dirichlet.rs  gamma.rs  markov.rs  mod.rs  multinormal.rs  normal.rs  poisson.rs  vonmises.rs  wishart.rs
src/old/sample/: mod.rs
src/optim/: em.rs  mod.rs
src/optim/approx/: mod.rs
src/optim/gsl/: bfgs.rs  mod.rs  nls.rs  (+1 more)
src/parse/: mod.rs
src/prob/: bernoulli.rs  beta.rs  binomial.rs  categorical.rs  dirichlet.rs  gamma.rs  histogram.rs  joint.rs  marginal.rs  mixture.rs  mod.rs  multinormal.rs  normal.rs  poisson.rs  quantile.rs  vonmises.rs  wishart.rs
src/sample/: column.rs  csv.rs  expr.rs  mod.rs  sql.rs
src/signal/: mod.rs  sampling.rs  sampling_utils.rs
src/sim/: histogram.rs  marginal.rs  metropolis.rs  mod.rs
src/stochastic/: mod.rs
src/table/: csv.rs  mod.rs
tests/: mod.rs
(+81 files in other folders)
