[package]
name = "bayes"
version = "0.0.1"
authors = ["Diego Lima <lima.ds@outlook.com>"]
edition = "2018"
license = "LGPL-3.0"
keywords = ["statistics", "probability", "inference"]
categories = ["science"]
build = "build.rs"
links = "gsl"
publish = ["crates-io"]
readme = "README.md"
description = "Composable abstractions to build probabilistic models and inference algorithms"

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
path="src/cli/main.rs"
name="bayes"

[dependencies]
nalgebra = { version = "0.21.0", features = ["serde-serialize", "sparse"] }
simba="0.1.2"
petgraph = "0.5.0"
serde = { version="1.0.111", features=["derive"] }
serde_json = "1.0"
rand = "0.7.3"
rand_distr = "0.2.2"
csv = "1.1.3"
postgres = "0.17.3"
sqlparser = "0.5.1"
rusqlite = "0.23.1"
structopt = "0.3.17"
anyhow = "1.0.32"
thiserror = "1.0.20"

# rust_decimal = { version = "1.3.0", features = ["postgres"] }

[features]
mkl=[]
#sql=[]

[[example]]
name = "composition"
path = "examples/composition.rs"

[[example]]
name = "sample"
path = "examples/sample.rs"

[[example]]
name="approx"
path = "examples/approx.rs"


