[package]
name = "bayes"
version = "0.0.1"
authors = ["Diego Lima <lima.ds@outlook.com>"]
edition = "2018"
license = "LGPL-3.0"
keywords = ["statistics", "probability", "inference"]
categories = ["science"]
build = "build.rs"
links = "gsl"
publish = ["crates-io"]
readme = "README.md"
description = "Composable abstractions to build probabilistic models and inference algorithms"

[lib]
crate-type = ["staticlib", "rlib", "dylib"]
# crate-type = ["dylib"]
	
# [[bin]]
# path="src/cli/main.rs"
# name="bayes"

[dependencies]
nalgebra = { version = "0.22.0", features = ["serde-serialize", "sparse"] }
simba="0.1.2"
petgraph = "0.5.0"
serde = { version="1.0.111", features=["derive"] }
serde_json = "1.0"
rand = "0.7.3"
rand_distr = "0.2.2"
csv = "1.1.3"
postgres = "0.17.3"
sqlparser = "0.5.1"
rusqlite = "0.23.1"
structopt = "0.3.19"
anyhow = "1.0.32"
thiserror = "1.0.20"
argmin = { git="https://github.com/argmin-rs/argmin", features = ["nalgebral"] }
# pgdatum = { git = "https://github.com/limads/pgdatum.git" }
# pgdatum = { path = "../pgdatum", optional = true }
either = "1.6.1"
# warp = "0.2.5"
# rand_isaac = "0.2.0"

[build-dependencies]
cc = "1.0"

# pg-extend = { version = "0.2.1", optional=true }
# levenberg-marquardt = "0.6.0"
# r_mathlib = "0.1.0"
# fann = "0.1.7"
# rust_decimal = { version = "1.3.0", features = ["postgres"] }

# To build with pgext, use
# RUSTFLAGS="-C link-arg=-undefineddynamic_lookup" PG_INCLUDE_PATH=/usr/include/postgresql/11/server cargo build --features pgext
[features]
mkl=[]
pgext=[]
gsl=[]
# api=[]
# sql=[]

[[example]]
name = "composition"
path = "examples/composition.rs"

[[example]]
name = "sample"
path = "examples/sample.rs"

[[example]]
name="approx"
path = "examples/approx.rs"


